# uix_testbed

./: .gitignore  CMakeLists.txt  main.cpp
htcw_bits/: .piopm  CMakeLists.txt  library.json
htcw_bits/include/: htcw_bits.hpp  htcw_endian.hpp
htcw_data/: CMakeLists.txt
htcw_gfx/: CMakeLists.txt
htcw_io/: .piopm  CMakeLists.txt  library.json
htcw_io/src/: io_stream.cpp
htcw_ml/: CMakeLists.txt  README.md  library.json
htcw_ml/include/: ml_reader.hpp  ml_reader_fa.hpp
htcw_uix/: CMakeLists.txt
